--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <title>Snake Game</title>
-        <link rel="icon" href="/img/Capture.PNG">
+        <!-- <link rel="icon" href="/img/Capture.PNG"> -->
         <canvas id="snake" width="280" height="280" style="background-color: #FFFF00"></canvas>
         
     </head>
