--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <html>
     <head>
         <title>Snake Game</title>
-        <!-- <link rel="icon" href="/img/Capture.PNG"> -->
-        <canvas id="snake" width="280" height="280" style="background-color: #FFFF00"></canvas>
+        <link rel="icon" href="/img/Capture.PNG">
+        <canvas id="snake" width="300" height="300" style="background-color: #FFFF00"></canvas>
         
     </head>
     <body>
